# LjubljanaTouristApp

./: README.md
android/: AndroidManifest.xml  CMakeLists.txt  CMakeLists.txt~
android/assets/: buildOrb.yaml  kipBuildOrb.yaml  kipOrb.yaml  mean.yaml  posNegOrb.yaml
android/native/: conversions.cpp  conversions.h  native.cpp  operations.cpp  operations.h
android/res/drawable-hdpi/.comments/: grad.jpg.xml  vodnik.jpg.xml
android/res/layout/: activity_choosen_image.xml
android/res/values/: strings.xml
android/src/si/rekonder/android/touristApp/: CameraActivity.java  CameraView.java  ChoosenImage.java  Sigleton.java
cmake/: Android.cmake  AndroidManifest.xml.in  AndroidToolchain.cmake
